# Raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
lib/: geometryObject.c  geometryObject.h  gmath.c  gmath.h  graphics.c  graphics.h  material.c  material.h  pixelBuffer.h  ray.c  ray.h  raycaster.c  raycaster.h  renderScene.c  renderScene.h  structs.c  structs.h  vecMath.c  vecMath.h
